# chemi_chatbot

./: .env.example  .gitignore  CLAUDE.md  CODESPACE_SETUP.md  Dockerfile  Dockerfile.apprunner  Makefile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements.txt
.bedrock_agentcore/chemistry_chatbot/: dependencies.hash
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: deploy.yml
data/: chemistry_data.json
data/compounds/: acetic_acid.json  ethanol.json  ethene.json  ethyl_acetate.json  ethyne.json  methane.json
data/rules/: alcohol_naming.json
docs/: DEPLOYMENT.md
gradio/: app.py
scripts/: download_models.sh  start.sh  verify_and_update_image_urls.py
src/: agent.py  generate_tts.py  main.py  tools.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: conditional.py  extract_validate.py  generate.py  retrieve.py
src/agent/tools/: __init__.py  isomers.py  search.py
src/pipeline/: generate_tts.py  generate_tts_piper.py  ingest.py  upload_to_s3.py
src/services/: __init__.py  data_service.py  embedding_service.py  gemini_service.py  keyword_search_service.py  qdrant_service.py
src/static/: index.html
tests/: test_embedding.py  test_extract_optimized.py  test_flow_trace.py  test_hybrid_search.py  test_integration.py  test_keyword_search.py  test_qdrant_service.py  test_services.py  test_student_scenarios.py  test_tts.py
