[project]
name = "chemistry-chatbot"
version = "0.1.0"
description = "Chemistry chatbot for Grade 11 Vietnamese students"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "google-genai>=1.47.0",
    "gradio>=5.49.1",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.31.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
